<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/score_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        tools:text="42"
        android:textColor="@color/green_medium"
        android:textSize="64sp" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/your_score"
        android:textColor="@color/black"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        tools:text="@string/success_result_title"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        tools:text="@string/success_result_subtitle"
        android:textColor="@color/text_dark"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/game_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/row_highscore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/highscore_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="4dp"
                android:text="@string/your_highscore"
                android:textColor="@color/text_medium"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/highscore_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="16dp"
                tools:text="38"
                android:textColor="@color/text_dark"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_reaction_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/reaction_time_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="4dp"
                android:text="@string/avg_reaction_time"
                android:textColor="@color/text_medium"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/reaction_time_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="16dp"
                tools:text="0.8s"
                android:textColor="@color/text_dark"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_accuracy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/accuracy_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="4dp"
                android:text="@string/accuracy"
                android:textColor="@color/text_medium"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/accuracy_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="16dp"
                tools:text="24%"
                android:textColor="@color/text_dark"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <carbon.widget.FrameLayout
        android:id="@+id/button_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/gray_dark"
        android:padding="12dp"
        app:carbon_rippleColor="@color/white"
        app:carbon_cornerRadius="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/menu"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </carbon.widget.FrameLayout>

    <carbon.widget.FrameLayout
        android:id="@+id/button_tutorial"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/sky_blue_dark"
        android:padding="12dp"
        app:carbon_rippleColor="@color/white"
        app:carbon_cornerRadius="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tutorial"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </carbon.widget.FrameLayout>

    <carbon.widget.FrameLayout
        android:id="@+id/button_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/green_medium"
        android:padding="12dp"
        app:carbon_rippleColor="@color/white"
        app:carbon_cornerRadius="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/icon_retry"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="32sp" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:text="@string/retry"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>
    </carbon.widget.FrameLayout>
</LinearLayout>