<?xml version="1.0" encoding="utf-8"?>
<carbon.widget.FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc">

    <LinearLayout
        android:id="@+id/game_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <carbon.widget.LinearLayout
            android:id="@+id/info_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="@dimen/carbon_margin"
            android:layout_marginLeft="@dimen/carbon_margin"
            android:layout_marginRight="@dimen/carbon_margin"
            android:background="@color/carbon_white"
            android:paddingBottom="@dimen/carbon_margin"
            android:paddingTop="@dimen/carbon_margin"
            app:carbon_cornerRadius="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Score"
                    android:textColor="@color/carbon_black" />

                <TextView
                    android:id="@+id/score_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/carbon_black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Time left"
                    android:textColor="@color/carbon_black" />

                <TextView
                    android:id="@+id/time_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10.0"
                    android:textColor="@color/carbon_black"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="High score"
                    android:textColor="@color/carbon_black" />

                <TextView
                    android:id="@+id/high_score_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/carbon_black"
                    android:textSize="24sp" />
            </LinearLayout>
        </carbon.widget.LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/carbon_margin"
            android:layout_weight="1">

            <com.arjun.deeper.views.customviews.GameGridView
                android:id="@+id/game_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/menu_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_overlay_dark"
        android:padding="16dp">

        <com.arjun.deeper.views.customviews.MenuButtonView
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/restart_button"
            app:button_text="@string/play" />

        <com.arjun.deeper.views.customviews.MenuButtonView
            android:id="@+id/restart_button"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/play_button"
            app:layout_constraintBottom_toTopOf="@+id/tutorial_button"
            app:button_text="@string/restart" />

        <com.arjun.deeper.views.customviews.MenuButtonView
            android:id="@+id/tutorial_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/restart_button"
            app:layout_constraintBottom_toTopOf="@+id/scoreboard_button"
            app:button_text="@string/how_to_play" />

        <com.arjun.deeper.views.customviews.MenuButtonView
            android:id="@+id/scoreboard_button"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tutorial_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:button_text="@string/highscores" />
    </android.support.constraint.ConstraintLayout>
</carbon.widget.FrameLayout>